<resources>
    <string name="app_name">SteamApp</string>
    <string name="Пароль">Пароль</string>
    <string name="Регистрация">Регистрация</string>
    <string name="Повтор">Повторите пароль</string>
    <string name="Почта">Почта</string>
    <string name="Логин">Логин</string>
    <string name="Имя">Имя</string>
    <string name="Фамилия">Фамилия</string>


    <string-array name="friendList">
        <item>Русланка</item>
        <item>Плющик</item>
        <item>Славка</item>
        <item>Димасик</item>
        <item>Костька</item>
        <item>Колинс</item>

    </string-array>
</resources>